Fix grid gap on right side end of viewport
problem:
you define too much grid column end (max 3) on
every element. even when you use span, you should
calculate the line too. it will become overlap
and produce some gap on edge of the content

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -22,7 +22,7 @@
 .header {
   background-color: #393f4d;
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 3;
 
   /* header grid */
   display: grid;
@@ -73,7 +73,7 @@
 .nav {
   background-color: #c50208;
   grid-column-start: 2;
-  grid-column-end: 5;
+  grid-column-end: 3;
 }
 
 .nav ul {
@@ -90,7 +90,7 @@
 .article {
   background-color: #bccbde;
   grid-column-start: 2;
-  grid-column-end: span 3;
+  grid-column-end: 3;
 
   /* grid */
   display: grid;
@@ -126,7 +126,7 @@
 .footer {
   background-color: #393f4d;
   grid-column-start: 1;
-  grid-column-end: span 4;
+  grid-column-end: 3;
 }
 
 .footer p {
